<resources>
    <string name="app_name">AppDulceIdea</string>
    <string name="dulceanhelatte">DulceAnhelatte</string>
    <string name="todo">TODO</string>
    <string name="panel_de_administraci_n">Panel de Administración</string>
    <string name="seleccionar_opci_n">Seleccionar Opción</string>
    <string name="numero_de_factura">Numero de Factura</string>
    <string name="n_mero_de_factura">Número de Factura</string>
    <string name="numero_de_factura1">Numero de Factura</string>
    <string name="n_mero_de_factura2">Número de Factura</string>
    <string name="seleccionar_opci_n3">Seleccionar Opción</string>
    <string name="ingrsesar_factura">Ingrsesar Factura</string>
    <string name="dulceanhelatte1">DulceAnhelatte</string>
    <string name="todo1">TODO</string>
</resources>